feat(client): render map
