# apps/errant-tower-server/Orchestrator/ExpeditionService.cs
@@ -7,6 +7,7 @@ public interface IExpeditionService
 {
     public Task<GetFloorsResponse> GetFloors(string userId);
     public Task StartExpedition(string userId, StartExpeditionRequest request);
+    public Task<GetExpeditionResponse> GetExpedition(string userId);
 }
 
 public class ExpeditionService(
@@ -27,5 +28,26 @@ public class ExpeditionService(
     {
         var battleStatistics = await statisticsService.GetUserBattleStatistics(userId);
         await progressService.StartExpedition(userId, request.FloorGuid, battleStatistics);
+    }
+
+    public async Task<GetExpeditionResponse> GetExpedition(string userId)
+    {
+        var expedition = await progressService.GetExpedition(userId);
+        return new GetExpeditionResponse
+        {
+
+            FloorGuid = expedition.FloorGuid,
+            FloorImageUrl = expedition.FloorImageUrl,
+            Initiative = expedition.Initiative,
+            FloorTiles = expedition.FloorTiles,
+            MaxHealth = expedition.MaxHealth,
+            Health = expedition.Health,
+            MaxMana = expedition.MaxMana,
+            Mana = expedition.Mana,
+            MaxEnergy = expedition.MaxEnergy,
+            Energy = expedition.Energy,
+            X = expedition.X,
+            Y = expedition.Y,
+        };
     }
 }
